# MCU

./: Спецификаторы формата printf в C.txt
02/02-control/: CMakeLists.txt  main.c  main.h
02/02-control/led_task/: led_task.c  led_task.h
02/02-control/protocol_task/: protocol_task.c  protocol_task.h
02/02-control/stdio_task/: stdio_task.c
02/02-echo/: CMakeLists.txt  main.c
02/02-on-off/: 02_on_of.py  02_on_of_blink.py  CMakeLists.txt  main.c  main.h
02/02-on-off/led/: led.c
02/02-printf/: CMakeLists.txt  main.c
03_adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03_adc/adc_task/: adc_task.c  adc_task.h
03_adc/led_task/: led_task.c
03_adc/stdio_task/: stdio_task.c
04_bme/: CMakeLists.txt  main.c
04_bme/led_task/: led_task.h
04_bme/stdio_task/: stdio_task.c
libs/bme280_driver/: CMakeLists.txt
libs/bme280_driver/include/: bme280_driver.h  bme280_regs.h
libs/bme280_driver/src/: bme280_driver.c
libs/protocol/: CMakeLists.txt
libs/protocol/include/: protocol_task.h
